--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -82,8 +82,50 @@ The CM1 score was calculated for all the 43 questions of the new dataset
 for each of the 7 different clusters. The selected top and bottom features  
 for each cluster is presented in the Tables().
 
-The figure ??? demonstrate the CM1 score for the 43 questions for the Cluster0,
-with the selected 12 lowest and 13 highest ranked questions shown in red and green respectively. The difference between the cumulative CM1 socores for Cluster 0 is shown in the figure ??? 
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster0.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster0}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster1.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster1}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster2.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster2}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster3.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster3}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster4.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster4}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster5.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster5}
+\end{figure}
+
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{CM1_Cluster6.png}
+	\caption{CM1 Score}
+	\label{fig:Cluster6}
+\end{figure}
+
+The figure ~\ref{fig:Cluster0} demonstrate the CM1 score for the 43
+questions for the Cluster0, with the selected 12 lowest and 13 highest ranked questions shown in red and green respectively. The difference between the cumulative CM1 socores for Cluster 0 is shown in the figure ??? 
 
 
 \subsubsection{Description of Clusters}
@@ -91,9 +133,6 @@ with the selected 12 lowest and 13 highest ranked questions shown in red and gre
 In order to further describe the clusters found by our method, we compute a new
 score proposed by(), the CM1 score.
 
-\begin{figure}[h]
-\includegraphics[ width=\textwidth ]{CM1_Cluster0.png}
-\end{figure}
 
 
 %few sentences on what CM_1 score is
