--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -84,7 +84,9 @@ for each cluster is presented in the Tables().
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster0.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster0, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster0}
 \end{figure}
 
@@ -125,7 +127,9 @@ for each cluster is presented in the Tables().
 \end{figure}
 
 The figure ~\ref{fig:Cluster0} demonstrate the CM1 score for the 43
-questions for the Cluster0, with the selected 12 lowest and 13 highest ranked questions shown in red and green respectively. The difference between the cumulative CM1 socores for Cluster 0 is shown in the figure ??? 
+questions for the Cluster0, with the selected 12 lowest and 13 highest ranked
+questions shown in red and green respectively. The difference between the
+cumulative CM1 socores for Cluster 0 is shown in the figure ???
 
 
 \subsubsection{Description of Clusters}
