--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -30,7 +30,7 @@ Specifically, the survey was divided into 5 sections: Awareness and Involvement
 in Charities, Trust, Regulation, Public Register of Charities and Demographics.
 
 Aiming to cluster the survey respondents according their trust and confidence in
-charities, a new dataset was obtained from the original dataset. The new dataset
+charities, a new dataset was obtained from the original dataset. It
 consists of the Trust section responses which were rated on the scale from 1 to
 10. In addition, the questions not answered by all the respondents and those
 with user-typed responses were removed. Overall, 1,562 responses of 43
