--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -30,7 +30,7 @@ Specifically, the survey was divided into 5 sections: Awareness and Involvement
 in Charities, Trust, Regulation, Public Register of Charities and Demographics.
 
 Aiming to cluster the survey respondents according their trust and confidence in
-charities, a new dataset was obtained from the original dataset. The new dataset
+charities, a new dataset was obtained from the original dataset. It
 consists of the Trust section responses which were rated on the scale from 1 to
 10. In addition, the questions not answered by all the respondents and those
 with user-typed responses were removed. Overall, 1,562 responses of 43
@@ -90,46 +90,60 @@ for each cluster is presented in the Tables().
 	\label{fig:Cluster0}
 \end{figure}
 
+The figure ~\ref{fig:Cluster0} demonstrate the CM1 score for the 43
+questions for the Cluster0, with the selected 12 lowest and 13 highest ranked
+questions shown in red and green respectively. The difference between the
+cumulative CM1 socores for Cluster 0 is shown in the figure ???
+
+
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster1.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster1, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster1}
 \end{figure}
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster2.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster2, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster2}
 \end{figure}
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster3.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster3, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster3}
 \end{figure}
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster4.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster4, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster4}
 \end{figure}
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster5.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster5, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster5}
 \end{figure}
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster6.png}
-	\caption{CM1 Score}
+	\caption{\textbf{CM1 Scores for the 43 questions for Cluster6, based on the
+	clustering dataset.} The selected top and bottom questions are shown in red
+	and green respectevly.}
 	\label{fig:Cluster6}
 \end{figure}
 
-The figure ~\ref{fig:Cluster0} demonstrate the CM1 score for the 43
-questions for the Cluster0, with the selected 12 lowest and 13 highest ranked
-questions shown in red and green respectively. The difference between the
-cumulative CM1 socores for Cluster 0 is shown in the figure ???
 
 
 \subsubsection{Description of Clusters}
