--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -79,6 +79,12 @@ different sizes. These included Cluster0 (13\%), Cluster1 (10\%), Cluster2
 (12\%), Cluster3 (20\%), Cluster4 (3\%), Cluster5(36\%) and Cluster6 (6\%).
 
 
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth ]{Clusters.png}
+	\caption{\textbf{Clusters} The MSTkNN.}
+	\label{fig:Clusters}
+\end{figure}
+
 The CM1 score was calculated for all the 43 questions of the new dataset
 for each of the 7 different clusters. The selected top and bottom features  
 for each cluster is presented in the Tables().
@@ -146,6 +152,17 @@ cumulative CM1 socores for Cluster 0 is shown in the figure ???
 \end{figure}
 
 
+\begin{figure}[h]
+	\includegraphics[ width=\textwidth]{Difference_Cluster0.png}
+	\includegraphics[ width=\textwidth]{Difference_Cluster1.png}
+	\includegraphics[ width=\textwidth]{Difference_Cluster2.png}
+	\includegraphics[ width=\textwidth]{Difference_Cluster3.png}
+	%\includegraphics[ width=\textwidth]{Difference_Cluster4.png}
+	%\includegraphics[ width=\textwidth]{Difference_Cluster5.png}
+	%\includegraphics[ width=\textwidth]{Difference_Cluster6.png}
+	\caption{\textbf{Diferrences} The.}
+	\label{fig:Differences}
+\end{figure}
 
 \subsubsection{Description of Clusters}
 
