cite package, bib references

--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -2,6 +2,7 @@
 %%There is just one section and two subsections.
 \documentclass{article}
 \usepackage{graphicx}
+\usepackage{cite}
 \graphicspath{ {images/} }
 
 
@@ -61,8 +62,6 @@ partitioned into smaller subgraphs which are the resultant clusters.
 
 %Normalization by row?
 
-%write a fw sentences about MST
-%write a few sentences about kNN
 
 After clustering the dataset, the new score introduced by (shakespeare) was
 computed to highlight the individual characteristics of each cluster. The CM1
