--- a/TrustConfidenceAustraliaCharities/references.bib
+++ b/TrustConfidenceAustraliaCharities/references.bib
@@ -1,4 +1,4 @@
-@article{
+@article{Balabanis1997,
    author = {Balabanis, G and Stables, R. E and Phillips, H. C},
    title = {Market orientation in the top 200 British charity organizations and its impact on their performance},
    journal = {European Journal of Marketing},
@@ -9,7 +9,7 @@
    type = {Journal Article}
 }
 
-@article{
+@article{Bekkers2009,
    author = {Bekkers, René and Bowman, Woods},
    title = {The Relationship Between Confidence in Charitable Organizations and Volunteering Revisited},
    journal = {Nonprofit and Voluntary Sector Quarterly},
@@ -22,7 +22,7 @@
    type = {Journal Article}
 }
 
-@article{
+@article{Berman2003,
    author = {Berman, Gabrielle and Davidson, Sinclair},
    title = {Do Donors Care? Some Australian Evidence},
    journal = {Voluntas: International Journal of Voluntary and Nonprofit Organizations},
@@ -40,7 +40,7 @@ Australia},
    type = {Journal Article}
 }
 
-@article{
+@article{Cermak1994,
    author = {Cermak, Dianne S. P. and File, Karen Maru and Prince, Russ Alan},
    title = {A benefit segmentation of the major donor market},
    journal = {Journal of Business Research},
@@ -54,7 +54,7 @@ Australia},
    type = {Journal Article}
 }
 
-@article{
+@article{Duaso2012,
    author = {Duaso, M. and Duncan, D.},
    title = {Health impact of smoking and smoking cessation strategies: current evidence},
    journal = {Br J Community Nurs},
@@ -86,7 +86,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Gaskin1999,
    author = {Gaskin, Katharine},
    title = {Blurred vision: public trust in charities},
    journal = {International Journal of Nonprofit and Voluntary Sector Marketing},
@@ -100,7 +100,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Hind2011,
    author = {Hind, Andrew},
    title = {New development: Increasing public trust and confidence in charities: on the side of the angels},
    journal = {Public Money & Management},
@@ -114,7 +114,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Sargeant2001,
    author = {Sargeant, Adrian},
    title = {Relationship Fundraising: How to Keep Donors Loyal},
    journal = {Nonprofit Management and Leadership},
@@ -128,7 +128,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Sargeant2006,
    author = {Sargeant, Adrian and Ford, John B. and West, Douglas C.},
    title = {Perceptual determinants of nonprofit giving behavior},
    journal = {Journal of Business Research},
@@ -142,7 +142,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Saxton2004,
    author = {Saxton, Joe},
    title = {The achilles' heel of modern nonprofits is not public ‘trust and confidence’ but public understanding of 21st century charities},
    journal = {International Journal of Nonprofit and Voluntary Sector Marketing},
@@ -156,7 +156,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Schlegelmilch1989,
    author = {Schlegelmilch, B. B. and Tynan, A. C.},
    title = {The scope for market segmentation within the charity market: An empirical analysis},
    journal = {Managerial and Decision Economics},
@@ -170,7 +170,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Tonkiss1999,
    author = {Tonkiss, Fran and Passey, Andrew},
    title = {Trust, Confidence and Voluntary Organisations: Between Values and Institutions},
    journal = {Sociology},
@@ -183,7 +183,7 @@ Tobacco Use Cessation Products},
    type = {Journal Article}
 }
 
-@article{
+@article{Marsden2013,
    author = {Marsden, John and Budden, David and Craig, Hugh and Moscato, Pablo},
    title = {Language Individuation and Marker Words: Shakespeare and His Maxwell's Demon},
    journal = {PLoS ONE},
@@ -195,3 +195,13 @@ Tobacco Use Cessation Products},
    year = {2013},
    type = {Journal Article}
 }
+
+@phdthesis{Inostroza2008,
+   author = {Inostroza-Ponta, M},
+   title = {An Integrated and Scalable Approach Based on Combinatorial Optimization Techniques for the Analysis of Microarray Data},
+   university = {The University of Newcastle},
+   school = {School of Electrical Engineering and Computer Science},
+   type = {PhD thesis},
+   year = {2008},
+}
+
