--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -85,20 +85,27 @@ CM1(w,X,Y) = \frac{\frac{1}{\left|X\right|}  \sum_{x \in X} x_{w} - \frac{1}{\le
 
 The MSTkNN clustering algorithm was able to find 7 different clusters of
 different sizes according Figure \ref{fig:Clusters}. These included Cluster0
-(13\%), Cluster1 (10\%), Cluster2 (12\%), Cluster3 (20\%), Cluster4 (3\%),
-Cluster5(36\%) and Cluster6 (6\%).
+with 195 respondents (13\%), Cluster1 with 157 (10\%), Cluster2 with 192 (12\%),
+Cluster3 with 317 (20\%), Cluster4 with 45 (3\%), Cluster5 with 556 (36\%) and
+Cluster6 with 100 (6\%).
 
 
 \begin{figure}[h]
 	\includegraphics[scale=0.5]{Clusters.png}
-	\caption{\textbf{Percentage of respondents for each cluster discovered by the
-	MSTkNN clustering algorithm} The MSTkNN.}
+	\caption{Distribution of respondents among 7 different clusters obtained
+	by MSTkNN clustering algorithm.}
 	\label{fig:Clusters}
 \end{figure}
 
-The CM1 score was calculated for all the 43 features of the new dataset
+The CM1 score was then calculated for all the 43 features of the new dataset
 for each of the discovered clusters. The selected top and bottom features for
-each cluster is presented in the Tables~\ref{tab:bottom} and ~\ref{tab:top}.
+each cluster is presented in the Tables~\ref{tab:bottom} and~\ref{tab:top}.
+These tables present the CM1 scores in descending order. The Bottom features
+contains the most negative ranked features while the top contains the most
+positive ranked features for each cluster. In this context, the bottom features
+highlight the questions with the lowest rates for a specific cluster compared to
+others. However, the top features highlight the questions with the highest rates
+for a selected cluster compared to others.
 
 \begin{table}[htbp]
   \centering
@@ -161,14 +168,13 @@ The Figure~\ref{fig:CM1Cluster0} demonstrate the CM1 score for the 43 features
 for Cluster0, with the 12 bottom and 13 top features shown in red and green
 respectively. The question Q7B, which aims to rate the trust and confidence
 levels between different institutions and organizations, is shown to dominate as
-a bottom features, representing 9 of them. Among the top features, the
-questions Q11 which rate the importance for charities providing some types of
-information and Q9 that rate the respondents agreement with factors that may
-drive trust in charities are shown as a positive features. The difference
-between the cumulative CM1 scores for the top and bottom features for Cluster0
-is shown in the Figure~\ref{fig:DifferencesCluster0}. It shows a proximity
-between Cluster0, Cluster1 and Cluster2 which score higher positive results
-against these features.
+a bottom feature. Among the top features, the questions Q11 which rate the
+importance for charities providing some types of information and Q9 that rate
+the respondents agreement with factors that may drive trust in charities are
+shown as a positive features. The difference between the cumulative CM1 scores
+for the top and bottom features for Cluster0 is shown in the
+Figure~\ref{fig:DifferencesCluster0}. It is observed that this cluster score
+higher positive results against these features.
 
 
 \begin{figure}[h]
@@ -185,8 +191,7 @@ against these features.
 	\caption{Difference between the cumulative CM1 scores for the 12 bottom and 13
 	top features for Cluster0, as presented in Tables~\ref{tab:bottom}
 	and~\ref{tab:top}. The respondents of Cluster0 are shown in blue. It is
-	observed that they score higher positive, and they score relatively
-	close to Cluster1 and Cluster2.}
+	observed that they score higher positive against these features.}
 	\label{fig:DifferencesCluster0}
 \end{figure}
 
@@ -200,9 +205,8 @@ charities overall and only appears as bottom feature for this cluster and
 Cluster2. The question Q11 which is related with the information provided by
 charities appears as a significant question among the top features. The
 difference between cumulative CM1 scores for these top and bottom features for
-Cluster1 is shown in the Figure~\ref{fig:DifferencesCluster1}. It confirms a
-proximity between Cluster1 and Cluster2, and it also shows that these
-two clusters score positive results against these features.
+Cluster1 is shown in the Figure~\ref{fig:DifferencesCluster1}. It is observed
+that this cluster score positive results against these features.
 
 
 \begin{figure}[h]
@@ -211,8 +215,7 @@ two clusters score positive results against these features.
 	The selected top and bottom features are shown in red and green respectively
 	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The majority of
 	top features are from question Q11 which suggests that the respondents from
-	this group priority care about the information that Australian charities
-	provide.}
+	this group priority care about the information that charities may provide.}
 	\label{fig:CM1Cluster1}
 \end{figure}
 \begin{figure}[h]
@@ -220,8 +223,7 @@ two clusters score positive results against these features.
 	\caption{Difference between the cumulative CM1 scores for the 12 bottom and 13
 	top features for Cluster1, as presented in Tables~\ref{tab:bottom}
 	and~\ref{tab:top}. The respondents of Cluster1 are shown in light blue. It is
-	observed that they score higher results against these features and are
-	relatively close from the respondents of Cluster2.}
+	observed that they score higher results against these features.}
 	\label{fig:DifferencesCluster1}
 \end{figure}
 
@@ -230,17 +232,19 @@ two clusters score positive results against these features.
 Figure~\ref{fig:CM1Cluster2} shows the 13 bottom and 11 top CM1 scores for
 Cluster2 in red and green respectively. The questions Q9, Q7B and Q7A compose
 the bottom features for this cluster and the questions Q11 and Q9 the top
-features. Figure~\ref{fig:DifferencesCluster2} shows the difference between
-the cumulative CM1 scores for these features for Cluster2. It is observed that
-the majority of the respondents of this cluster, and also Cluster1, score
-more positive results against these features.
+features. Although it is observed similar questions compared to the Cluster1
+among the bottom features, they differ among the top features.
+Figure~\ref{fig:DifferencesCluster2} shows the difference between the cumulative
+CM1 scores for these features for Cluster2. It is observed that the majority of
+the respondents of this cluster score more positive results against these
+features.
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster2.png}
 	\caption{CM1 Scores for the 43 features for Cluster2, based on the new dataset.
 	The selected top and bottom features are shown in red and green respectively
 	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The bottom
-	features are composed by features from questions Q9, Q7B and Q7A that
+	features are composed by features from questions Q9, Q7B and Q7A which
 	suggests a low rate of trust and confidence in Australian charities overall
 	and specific institutions and organizations. On the other hand, The top
 	features are composed by questions Q11 and Q9 features that suggest a
@@ -261,15 +265,11 @@ more positive results against these features.
 
 Figure~\ref{fig:CM1Cluster3} shows the 7 bottom and 8 top features for Cluster3
 in red and green respectively. Contrary Cluster1 and Cluster 2, the Q11 features
-appears as the most negative ranked features for this cluster. This question
-aims to rate the importance of Australian charities providing some kinds of
-information. The top features consist of features from the Q9, Q7A and Q7B
-questions. The question Q7A is observed as a top feature, and this question is
-only present in this cluster as a top feature. The difference between the
-cumulative CM1 scores for the top and bottom features are shown in
-Figure~\ref{fig:DifferencesCluster3}. The respondents of Cluster3 score less
-negative results against these features compared mainly to Cluster0, Cluster1
-and Cluster2.
+appears as the most negative ranked features for this cluster. The question Q7A
+is observed as a top feature, and this question is only present in this cluster
+as a top feature. The difference between the cumulative CM1 scores for the top
+and bottom features are shown in Figure~\ref{fig:DifferencesCluster3}. The
+respondents of Cluster3 score less negative results against these features.
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster3.png}
@@ -277,9 +277,9 @@ and Cluster2.
 	The selected top and bottom features are shown in red and green respectively
 	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The
 	most negative ranked features are from question Q11 that suggests a low
-	interest in the information that charities may provide. The questions Q7A and
-	Q7B among the most positive ranked questions indicate a high rate of trust and
-	confidence in charities.}
+	interest in the information that charities may provide. Additionally, the
+	questions Q7A and Q7B among the most positive ranked questions indicate a high
+	rate of trust and confidence in charities.}
 	\label{fig:CM1Cluster3}
 \end{figure}
 \begin{figure}[h]
@@ -287,8 +287,7 @@ and Cluster2.
 	\caption{Difference between the cumulative CM1 scores for the 7 bottom and 8
 	top features for Cluster3, as presented in Tables~\ref{tab:bottom}
 	and~\ref{tab:top}. The respondents of Cluster3 are shown in green. It is
-	observed that they score less negative results against these features
-	compared mainly to the previous clusters.}
+	observed that they score less negative results against these features.}
 	\label{fig:DifferencesCluster3}
 \end{figure}
 
@@ -297,8 +296,8 @@ and Cluster2.
 The Figure~\ref{fig:CM1Cluster4} demonstrate the CM1 score for the 43 features
 for Cluster4, with the 11 bottom and 8 top features shown in red and green
 respectively. The question Q9 dominate as a bottom feature and the questions
-Q7, Q11 and Q9 among the top features. The difference between the cumulative
-CM1 scores for the top and bottom features for Cluster0 is shown in the
+Q7, Q11 and Q9 dominate among the top features. The difference between the
+cumulative CM1 scores for the top and bottom features for Cluster0 is shown in the
 Figure~\ref{fig:DifferencesCluster4}. It is observed that the respondents of
 Cluster4 score less negative results against these features.
 
@@ -328,7 +327,7 @@ both, bottom and top features. This fact might highlight important factors that
 affect trust and confidence since the Cluster5 is the biggest cluster,
 representing 36\% of all respondents. The difference between the
 cumulative CM1 scores for the top and bottom features are shown in
-Figure~\ref{fig:DifferencesCluster3}. It is observed that the respondents of
+Figure~\ref{fig:DifferencesCluster5}. It is observed that the respondents of
 Cluster5 score strong positive results against these feature.
 
 \begin{figure}[h]
@@ -345,27 +344,45 @@ Cluster5 score strong positive results against these feature.
 	\includegraphics[ width=\textwidth]{Difference_Cluster5.png}
 	\caption{Difference between the cumulative CM1 scores for the 7 bottom and 9
 	top features for Cluster5, as presented in Tables~\ref{tab:bottom}
-	and~\ref{tab:top}. The respondents of Cluster5 are shown in dark yellow. It is
+	and~\ref{tab:top}. The respondents of Cluster5 are shown in yellow. It is
 	observed that they score strong positive results against these features}
 	\label{fig:DifferencesCluster5}
 \end{figure}
 
 % Cluster 6
 
+Figure~\ref{fig:CM1Cluster6} shows the 8 bottom and 13 top features for Cluster6
+in red and green respectively. The Q11 question is the most ranked
+bottom feature which suggest a low concern about the information provided by
+charities. Among the top features the most ranked question is Q7B which
+indicate a high trust and confidence rate for this cluster. The difference
+between the cumulative CM1 scores for the top and bottom features are shown in
+Figure~\ref{fig:DifferencesCluster6}. It is observed that the respondents of
+Cluster6 score strong positive results against these feature.
+
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster6.png}
-	\caption{\textbf{CM1 Scores for the 43 questions for Cluster6, based on the
-	clustering dataset.} The selected top and bottom questions are shown in red
-	and green respectevly.}
+	\caption{CM1 Scores for the 43 features for Cluster6, based on the new dataset.
+	The selected top and bottom features are shown in red and green respectively
+	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The most
+	negative ranked features are from question Q11 which suggests a low concern
+	about the information may charities provide. On the other hand, the most
+	positive positive features are from question Q7B which suggests a high
+	trust and confidence in institutions and organizations.}
 	\label{fig:CM1Cluster6}
 \end{figure}
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth]{Difference_Cluster6.png}
-	\caption{\textbf{Difference between the cumulative CM1 scores for Cluster6's 12
-	lowest and 13 highest scoring questions} The.}
+	\caption{Difference between the cumulative CM1 scores for the 8 bottom and 13
+	top features for Cluster6, as presented in Tables~\ref{tab:bottom}
+	and~\ref{tab:top}. The respondents of Cluster6 are shown in orange. It is
+	observed that they score strong positive results against these features}
 	\label{fig:DifferencesCluster6}
 \end{figure}
 
+
+%%%% Think about the descending order and change the tables 1 and 2 then write
+% again de description 
 
 
 
