--- a/TrustConfidenceAustraliaCharities/document.tex
+++ b/TrustConfidenceAustraliaCharities/document.tex
@@ -35,7 +35,7 @@ in Charities, Trust, Regulation, Public Register of Charities and Demographics.
 
 Aiming to cluster the survey respondents according their trust and confidence in
 charities, a new dataset was obtained from the original dataset. It consists of
-the Trust section responses which were rated on the scale from 1 to 10. In
+the Trust section responses, which were rated on the scale from 1 to 10. In
 addition, the questions not answered by all the respondents and those with
 user-typed responses were removed. This procedure was adopted in order to select
 informative and comparable questions as the survey contains different types of
@@ -46,7 +46,7 @@ Since the dataset can be represented as a graph, the methodology utilised for
 clustering is based on a novel graph-based clustering algorithm propose by
 ~\cite{Inostroza2008}. The MSTkNN combines a Minimum Spanning Tree (MST) and a
 k-Nearest Neighbor (kNN) proximity graphs. This combination allows us to perform
-a graph partitioning operation, which produce a clustering of the dataset
+a graph partitioning operation, which produces a clustering of the dataset
 represented by its graph. The graph partitioning separates the data in groups
 with similar characteristics utilizing a given proximity measurement. In this
 case, the Spearman correlation was used to measure the distance between
@@ -60,13 +60,13 @@ neighbors of each other according to a defined value of k. In this work, the
 value of k was defined as 3 for computing the kNN graph. The merge of these
 methods permit delete the connection between two objects in the MST if they are
 not reciprocally one of the k nearest of each other. Consequently, the MST is
-partitioned into smaller subgraphs which are the resultant clusters.
+partitioned into smaller subgraphs, which are the resultant clusters.
 
 %Normalization by row?
 
 After clustering the dataset, the new score introduced by~\cite{Marsden2013}
 was computed to highlight the individual characteristics of each cluster. The
-CM1 scores gives a overview about differences in averages for each feature from
+CM1 score gives a overview about differences in averages for each feature from
 a specific cluster in the investigated dataset. The rank of the CM1 scores of a
 cluster can be split into top or bottom features. The top features refers to
 features whose average are greater in a specific cluster than in all the others,
@@ -101,15 +101,15 @@ The CM1 score was then calculated for all the 43 features of the new dataset
 for each of the discovered clusters. The selected top and bottom features for
 each cluster is presented in the Tables~\ref{tab:bottom} and~\ref{tab:top}.
 These tables present the CM1 scores in descending order. The Bottom features
-contains the most negative ranked features while the top contains the most
-positive ranked features for each cluster. In this context, the bottom features
-highlight the questions with the lowest rates for a specific cluster compared to
-others. However, the top features highlight the questions with the highest rates
-for a selected cluster compared to others.
+contain the most negative ranked features while the top features contain the
+most positive ranked features for each cluster. In this context, the bottom
+features highlight the questions with the lowest rates for a specific cluster
+compared to others. However, the top features highlight the questions with the
+highest rates for a selected cluster compared to others.	
 
 \begin{table}[htbp]
   \centering
-  \caption{Bottom features for each cluster (presented in descending order of
+  \caption{Bottom features for each cluster (presented in ascending order of
   score)}
     \begin{tabular}{rrrrrrr}
     \toprule
@@ -133,7 +133,6 @@ for a selected cluster compared to others.
   \label{tab:bottom}
 \end{table}
 
-
 \begin{table}[htbp]
   \centering
   \caption{Top features for each cluster (presented in descending order of
@@ -142,39 +141,37 @@ for a selected cluster compared to others.
     \toprule
     Cluster\_0 & Cluster\_1 & Cluster\_2 & Cluster\_3 & Cluster\_4 & Cluster\_5 & Cluster6 \\
     \midrule
-    Q11\_1\_1 & Q11\_4\_1 & Q11\_4\_1 & Q9\_19 & Q7B\_4 & Q9\_12 & Q7B\_1 \\
-    Q9\_07 & Q11\_2\_1 & Q11\_1\_1 & Q9\_03 & Q11\_2\_1 & Q9\_08 & Q7B\_9 \\
-    Q11\_6\_1 & Q11\_1\_1 & Q9\_20 & Q7A   & Q7B\_3 & Q9\_01 & Q7B\_8 \\
-    Q9\_25 & Q11\_6\_1 & Q9\_21 & Q7B\_11 & Q9\_02 & Q9\_16 & Q9\_10 \\
-    Q9\_22 & Q11\_3\_1 & Q11\_6\_1 & Q7B\_7 & Q9\_10 & Q9\_11 & Q7B\_10 \\
-    Q9\_05 & Q11\_5\_1 & Q11\_3\_1 & Q9\_09 & Q11\_1\_1 & Q9\_03 & Q7B\_2 \\
-    Q11\_3\_1 & Q9\_20 & Q11\_5\_1 & Q9\_10 & Q11\_4\_1 & Q9\_19 & Q7B\_5 \\
-    Q9\_06 & Q9\_21 & Q9\_06 & Q9\_02 & Q11\_5\_1 & Q9\_13 & Q7B\_7 \\
-    Q11\_5\_1 & Q9\_05 & Q9\_05 &       &       & Q9\_14 & Q9\_02 \\
-    Q9\_24 & Q9\_06 & Q9\_07 &       &       &       & Q7B\_3 \\
-    Q9\_20 & Q9\_07 &       &       &       &       & Q7B\_11 \\
-    Q9\_23 &       &       &       &       &       & Q7B\_6 \\
-    Q9\_21 &       &       &       &       &       & Q7B\_4 \\
+    Q9\_21 & Q9\_07 & Q9\_07 & Q9\_02 & Q11\_5\_1 & Q9\_14 & Q7B\_4 \\
+    Q9\_23 & Q9\_06 & Q9\_05 & Q9\_10 & Q11\_4\_1 & Q9\_13 & Q7B\_6 \\
+    Q9\_20 & Q9\_05 & Q9\_06 & Q9\_09 & Q11\_1\_1 & Q9\_19 & Q7B\_11 \\
+    Q9\_24 & Q9\_21 & Q11\_5\_1 & Q7B\_7 & Q9\_10 & Q9\_03 & Q7B\_3 \\
+    Q11\_5\_1 & Q9\_20 & Q11\_3\_1 & Q7B\_11 & Q9\_02 & Q9\_11 & Q9\_02 \\
+    Q9\_06 & Q11\_5\_1 & Q11\_6\_1 & Q7A   & Q7B\_3 & Q9\_16 & Q7B\_7 \\
+    Q11\_3\_1 & Q11\_3\_1 & Q9\_21 & Q9\_03 & Q11\_2\_1 & Q9\_01 & Q7B\_5 \\
+    Q9\_05 & Q11\_6\_1 & Q9\_20 & Q9\_19 & Q7B\_4 & Q9\_08 & Q7B\_2 \\
+    Q9\_22 & Q11\_1\_1 & Q11\_1\_1 &       &       & Q9\_12 & Q7B\_10 \\
+    Q9\_25 & Q11\_2\_1 & Q11\_4\_1 &       &       &       & Q9\_10 \\
+    Q11\_6\_1 & Q11\_4\_1 &       &       &       &       & Q7B\_8 \\
+    Q9\_07 &       &       &       &       &       & Q7B\_9 \\
+    Q11\_1\_1 &       &       &       &       &       & Q7B\_1 \\
     \bottomrule
     \end{tabular}
   \label{tab:top}
 \end{table}
 
-
-
 % Cluster 0
 
 The Figure~\ref{fig:CM1Cluster0} demonstrate the CM1 score for the 43 features
 for Cluster0, with the 12 bottom and 13 top features shown in red and green
-respectively. The question Q7B, which aims to rate the trust and confidence
-levels between different institutions and organizations, is shown to dominate as
-a bottom feature. Among the top features, the questions Q11 which rate the
-importance for charities providing some types of information and Q9 that rate
-the respondents agreement with factors that may drive trust in charities are
-shown as a positive features. The difference between the cumulative CM1 scores
-for the top and bottom features for Cluster0 is shown in the
-Figure~\ref{fig:DifferencesCluster0}. It is observed that this cluster score
-higher positive results against these features.
+respectively, as presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The
+question Q7B, which aims to rate the trust and confidence levels between
+different institutions and organizations, is shown to dominate among the bottom
+features. It indicates a lower level of trust and confidence in these
+institutions and organizations. Furthermore, it is a distinctly characteristic
+for this cluster as observed in Table~\ref{tab:bottom}. The difference between
+the cumulative CM1 scores for the top and bottom features for Cluster0 is shown
+in the Figure~\ref{fig:DifferencesCluster0}. It is observed that this cluster
+score higher positive results against these features.
 
 
 \begin{figure}[h]
@@ -191,31 +188,32 @@ higher positive results against these features.
 	\caption{Difference between the cumulative CM1 scores for the 12 bottom and 13
 	top features for Cluster0, as presented in Tables~\ref{tab:bottom}
 	and~\ref{tab:top}. The respondents of Cluster0 are shown in blue. It is
-	observed that they score higher positive against these features.}
+	observed that they score higher positive results against these features.}
 	\label{fig:DifferencesCluster0}
 \end{figure}
 
-% Cluster 1
+% Cluster 1 and Cluster 2
 
 The 12 bottom and 11 top CM1 scores for the 43 features for Cluster1 are shown
-in red and green respectively in Figure~\ref{fig:CM1Cluster1}. The bottom
-features consists mainly by features from question Q9 with Q7A as the only
-exception. The question Q7A rates the trust and confidence in Australian
-charities overall and only appears as bottom feature for this cluster and
-Cluster2. The question Q11 which is related with the information provided by
-charities appears as a significant question among the top features. The
+in Figure~\ref{fig:CM1Cluster1}, and the 13 bottom and 11 top CM1 scores for
+Cluster2 are shown in Figure~\ref{fig:CM1Cluster2} in red and green
+respectively. The top features of both clusters are mainly composed for the same
+questions, Q9 and Q11, as observed in Table ~\ref{tab:top}. However they differ
+among the bottom features. The presence of bottom features from question Q7 in
+Cluster2 suggests a lower level of trust and confidence for this cluster. The
 difference between cumulative CM1 scores for these top and bottom features for
-Cluster1 is shown in the Figure~\ref{fig:DifferencesCluster1}. It is observed
-that this cluster score positive results against these features.
+Cluster1 and Cluster2 are shown in the Figures~\ref{fig:DifferencesCluster1}
+and~\ref{fig:DifferencesCluster2} respectively. It is observed that these
+clusters score positive results against these features and also score relatively
+close results although they differ among the top features.
 
-
-\begin{figure}[h]
+\begin{figure}[h] %% Cluster1
 	\includegraphics[ width=\textwidth ]{CM1_Cluster1.png}
 	\caption{CM1 Scores for the 43 features for Cluster1, based on the new dataset.
 	The selected top and bottom features are shown in red and green respectively
-	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The majority of
-	top features are from question Q11 which suggests that the respondents from
-	this group priority care about the information that charities may provide.}
+	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The presence of
+	question Q11 among the top features suggests that the respondents from this
+	group a great care about the information that charities may provide.}
 	\label{fig:CM1Cluster1}
 \end{figure}
 \begin{figure}[h]
@@ -227,27 +225,13 @@ that this cluster score positive results against these features.
 	\label{fig:DifferencesCluster1}
 \end{figure}
 
-% Cluster 2
-
-Figure~\ref{fig:CM1Cluster2} shows the 13 bottom and 11 top CM1 scores for
-Cluster2 in red and green respectively. The questions Q9, Q7B and Q7A compose
-the bottom features for this cluster and the questions Q11 and Q9 the top
-features. Although it is observed similar questions compared to the Cluster1
-among the bottom features, they differ among the top features.
-Figure~\ref{fig:DifferencesCluster2} shows the difference between the cumulative
-CM1 scores for these features for Cluster2. It is observed that the majority of
-the respondents of this cluster score more positive results against these
-features.
-
-\begin{figure}[h]
+\begin{figure}[h] %% Cluster2
 	\includegraphics[ width=\textwidth ]{CM1_Cluster2.png}
 	\caption{CM1 Scores for the 43 features for Cluster2, based on the new dataset.
 	The selected top and bottom features are shown in red and green respectively
-	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The bottom
-	features are composed by features from questions Q9, Q7B and Q7A which
-	suggests a low rate of trust and confidence in Australian charities overall
-	and specific institutions and organizations. On the other hand, The top
-	features are composed by questions Q11 and Q9 features that suggest a
+	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The features
+	from questions Q7B and Q7A among the bottom features suggests a low rate
+	of trust and confidence. On the other hand, The top question Q11 suggests a
 	greater concern about the information disponibilizide by charities.}
 	\label{fig:CM1Cluster2}
 \end{figure}
@@ -264,12 +248,14 @@ features.
 % Cluster 3
 
 Figure~\ref{fig:CM1Cluster3} shows the 7 bottom and 8 top features for Cluster3
-in red and green respectively. Contrary Cluster1 and Cluster 2, the Q11 features
-appears as the most negative ranked features for this cluster. The question Q7A
-is observed as a top feature, and this question is only present in this cluster
-as a top feature. The difference between the cumulative CM1 scores for the top
-and bottom features are shown in Figure~\ref{fig:DifferencesCluster3}. The
-respondents of Cluster3 score less negative results against these features.
+in red and green respectively. The Q11 features appear as the most negative
+ranked features for this cluster. It suggests a very lower concern about the
+information that charities may provide. The question Q7A is observed as a top
+feature, and this question is only present in this cluster as a top feature. It
+demonstrates a higher trust and confidence rate in Australian charities overall.
+The difference between the cumulative CM1 scores for the top and bottom features
+are shown in Figure~\ref{fig:DifferencesCluster3}. The respondents of Cluster3
+score less negative results against these features.
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster3.png}
@@ -278,8 +264,8 @@ respondents of Cluster3 score less negative results against these features.
 	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The
 	most negative ranked features are from question Q11 that suggests a low
 	interest in the information that charities may provide. Additionally, the
-	questions Q7A and Q7B among the most positive ranked questions indicate a high
-	rate of trust and confidence in charities.}
+	questions Q7A and Q7B among the most positive ranked questions indicate a
+	higher rate of trust and confidence in charities.}
 	\label{fig:CM1Cluster3}
 \end{figure}
 \begin{figure}[h]
@@ -291,14 +277,16 @@ respondents of Cluster3 score less negative results against these features.
 	\label{fig:DifferencesCluster3}
 \end{figure}
 
+
 % Cluster 4
 
 The Figure~\ref{fig:CM1Cluster4} demonstrate the CM1 score for the 43 features
 for Cluster4, with the 11 bottom and 8 top features shown in red and green
-respectively. The question Q9 dominate as a bottom feature and the questions
-Q7, Q11 and Q9 dominate among the top features. The difference between the
-cumulative CM1 scores for the top and bottom features for Cluster0 is shown in the
-Figure~\ref{fig:DifferencesCluster4}. It is observed that the respondents of
+respectively. The question Q9 dominate as a bottom feature while the question
+Q11 as a to feature. The question Q11 among the top features suggests a greater
+concern about the information provided by charities. The difference between the
+cumulative CM1 scores for the top and bottom features for Cluster0 is shown in
+the Figure~\ref{fig:DifferencesCluster4}. It is observed that the respondents of
 Cluster4 score less negative results against these features.
 
 \begin{figure}[h]
@@ -328,7 +316,7 @@ affect trust and confidence since the Cluster5 is the biggest cluster,
 representing 36\% of all respondents. The difference between the
 cumulative CM1 scores for the top and bottom features are shown in
 Figure~\ref{fig:DifferencesCluster5}. It is observed that the respondents of
-Cluster5 score strong positive results against these feature.
+Cluster5 score strong positive results against these features.
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster5.png}
@@ -353,12 +341,12 @@ Cluster5 score strong positive results against these feature.
 
 Figure~\ref{fig:CM1Cluster6} shows the 8 bottom and 13 top features for Cluster6
 in red and green respectively. The Q11 question is the most ranked
-bottom feature which suggest a low concern about the information provided by
-charities. Among the top features the most ranked question is Q7B which
-indicate a high trust and confidence rate for this cluster. The difference
+bottom feature, which suggest a low concern about the information provided by
+charities. Among the top features the most ranked question is Q7B, which
+indicate a higher trust and confidence rate for this cluster. The difference
 between the cumulative CM1 scores for the top and bottom features are shown in
 Figure~\ref{fig:DifferencesCluster6}. It is observed that the respondents of
-Cluster6 score strong positive results against these feature.
+Cluster6 score strong positive results against these features.
 
 \begin{figure}[h]
 	\includegraphics[ width=\textwidth ]{CM1_Cluster6.png}
@@ -367,7 +355,7 @@ Cluster6 score strong positive results against these feature.
 	and are presented in Tables~\ref{tab:bottom} and~\ref{tab:top}. The most
 	negative ranked features are from question Q11 which suggests a low concern
 	about the information may charities provide. On the other hand, the most
-	positive positive features are from question Q7B which suggests a high
+	positive positive features are from question Q7B which suggests a higher
 	trust and confidence in institutions and organizations.}
 	\label{fig:CM1Cluster6}
 \end{figure}
@@ -379,10 +367,6 @@ Cluster6 score strong positive results against these feature.
 	observed that they score strong positive results against these features}
 	\label{fig:DifferencesCluster6}
 \end{figure}
-
-
-%%%% Think about the descending order and change the tables 1 and 2 then write
-% again de description 
 
 
 
